[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-social"
version = "1.2.7"
description = "CLI tools for GitHub — follow back, unfollow, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Ajang Supardi"},
]
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0",
]
keywords = ["github", "cli", "follow", "unfollow", "toolkit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "pyright>=1.1.350",
]

[project.scripts]
gh-social = "gh_social.cli:main"

[project.urls]
Homepage = "https://github.com/ajangsupardi/gh-social"
Repository = "https://github.com/ajangsupardi/gh-social"

[tool.setuptools.packages.find]
include = ["gh_social*"]

# ── Type Checking ────────────────────────────────────────────────────────────

[tool.pyright]
include = ["gh_social"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportPrivateUsage = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false

# ── Linting ──────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["gh_social"]

# ── Testing ──────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ── Coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["gh_social"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
